Update: O nama stranica sa tekstom i slikom

--- a/pages/o-nama.html
+++ b/pages/o-nama.html
@@ -32,10 +32,25 @@
   </header>
 
   <!-- Sadržaj -->
-  <main class="container py-5">
-    <h1>O nama</h1>
-    <p>Ovo je stranica sa osnovnim informacijama o opservatoriji.</p>
-  </main>
+<main class="container py-5">
+  <div class="row align-items-center">
+    <div class="col-lg-6 mb-4 mb-lg-0">
+      <h1>O nama</h1>
+      <p>
+        Astronomska opservatorija je centar za posmatranje noćnog neba i edukaciju iz oblasti astronomije.
+        Naš cilj je da približimo astronomiju svim generacijama kroz javna posmatranja, predavanja i radionice.
+      </p>
+      <p>
+        Organizujemo događaje za škole, univerzitete i širu zajednicu. Na raspolaganju su moderni teleskopi
+        i stručni vodiči koji će vas uputiti u tajne svemira.
+      </p>
+    </div>
+    <div class="col-lg-6">
+      <img src="../assets/img/opservatorija.jpg" alt="Opservatorija" class="img-fluid rounded shadow">
+    </div>
+  </div>
+</main>
+
 
   <!-- Footer -->
   <footer class="border-top py-4">
