--- a/pages/dogadjaji.html
+++ b/pages/dogadjaji.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>O nama - Astronomska opservatorija</title>
+  <title>Događaji - Astronomska opservatorija</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../assets/css/main.css" rel="stylesheet">
 </head>
@@ -21,8 +21,8 @@
         </button>
         <div id="nav" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="o-nama.html">O nama</a></li>
-            <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
+            <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
+            <li class="nav-item"><a class="nav-link active" href="dogadjaji.html">Događaji</a></li>
             <li class="nav-item"><a class="nav-link" href="galerija.html">Galerija</a></li>
             <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
           </ul>
@@ -33,8 +33,8 @@
 
   <!-- Sadržaj -->
   <main class="container py-5">
-    <h1>O nama</h1>
-    <p>Ovo je stranica sa osnovnim informacijama o opservatoriji.</p>
+    <h1>Događaji</h1>
+    <p>Ovde će biti lista najavljenih događaja i aktivnosti.</p>
   </main>
 
   <!-- Footer -->
