Refactor: semantičke klase i SCSS struktura za sve stranice

--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <!-- Navigacija -->
-  <header class="sticky-top shadow-sm">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <header class="site-header">
+    <nav class="navbar navbar-expand-lg main-nav">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+        <a class="navbar-brand logo" href="../index.html">
           <img src="../assets/icons/logo.png" alt="Logo" width="36" height="36">
           <span>Astronomska opservatorija</span>
         </a>
@@ -20,7 +20,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="nav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto nav-links">
             <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
             <li class="nav-item"><a class="nav-link" href="galerija.html">Galerija</a></li>
@@ -31,17 +31,17 @@
     </nav>
   </header>
 
-  <!-- Sadržaj -->
-  <main class="container py-5">
-    <h1>Kontakt</h1>
+  <!-- Kontakt -->
+  <main class="container contact-section">
+    <h1 class="section-title">Kontakt</h1>
     <p>Ovde će biti forma za kontaktiranje opservatorije.</p>
   </main>
 
   <!-- Footer -->
-  <footer class="border-top py-4">
-    <div class="container small d-flex justify-content-between">
+  <footer class="site-footer">
+    <div class="container footer-content">
       <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle" class="link-secondary">Visoki kontrast</a>
+      <a href="#" id="contrastToggle">Visoki kontrast</a>
     </div>
   </footer>
 
