--- a/pages/dogadjaji.html
+++ b/pages/dogadjaji.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <!-- Navigacija -->
-  <header class="sticky-top shadow-sm">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <header class="site-header">
+    <nav class="navbar navbar-expand-lg main-nav">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+        <a class="navbar-brand logo" href="../index.html">
           <img src="../assets/icons/logo.png" alt="Logo" width="36" height="36">
           <span>Astronomska opservatorija</span>
         </a>
@@ -20,7 +20,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="nav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto nav-links">
             <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link active" href="dogadjaji.html">Događaji</a></li>
             <li class="nav-item"><a class="nav-link" href="galerija.html">Galerija</a></li>
@@ -31,17 +31,42 @@
     </nav>
   </header>
 
-  <!-- Sadržaj -->
-  <main class="container py-5">
-    <h1>Događaji</h1>
-    <p>Ovde će biti lista najavljenih događaja i aktivnosti.</p>
+  <!-- Događaji -->
+  <main class="container events-section">
+    <h1 class="section-title">Događaji</h1>
+    <div class="row">
+      <div class="col-md-6 col-lg-4 event-col">
+        <article class="event-card">
+          <img src="../assets/img/dogadjaj1.jpg" alt="Meteorski roj" class="event-image">
+          <h2 class="event-title">Posmatranje meteorskog roja</h2>
+          <p class="event-text">Pridružite nam se na noćnom posmatranju meteorskog roja Perzeida sa stručnim vodičima.</p>
+          <span class="event-date">12. avgust 2025.</span>
+        </article>
+      </div>
+      <div class="col-md-6 col-lg-4 event-col">
+        <article class="event-card">
+          <img src="../assets/img/dogadjaj2.jpg" alt="Predavanje o svemiru" class="event-image">
+          <h2 class="event-title">Predavanje: Tajne svemira</h2>
+          <p class="event-text">Edukativno predavanje za studente i entuzijaste o najnovijim otkrićima u astronomiji.</p>
+          <span class="event-date">20. septembar 2025.</span>
+        </article>
+      </div>
+      <div class="col-md-6 col-lg-4 event-col">
+        <article class="event-card">
+          <img src="../assets/img/dogadjaj3.jpg" alt="Radionica za decu" class="event-image">
+          <h2 class="event-title">Radionica za decu</h2>
+          <p class="event-text">Zabavna radionica gde deca mogu da nauče o planetama i sazvežđima kroz interaktivne igre.</p>
+          <span class="event-date">5. oktobar 2025.</span>
+        </article>
+      </div>
+    </div>
   </main>
 
   <!-- Footer -->
-  <footer class="border-top py-4">
-    <div class="container small d-flex justify-content-between">
+  <footer class="site-footer">
+    <div class="container footer-content">
       <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle" class="link-secondary">Visoki kontrast</a>
+      <a href="#" id="contrastToggle">Visoki kontrast</a>
     </div>
   </footer>
 
