--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Astronomska opservatorija</title>
   <meta name="description" content="Prezentacija astronomske opservatorije: posete, događaji, galerija i edukativni sadržaji." />
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Glavni CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navigacija -->
-  <header class="site-header">
-    <nav class="navbar navbar-expand-lg main-nav">
+  <header class="sticky-top shadow-sm">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand logo" href="index.html">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
           <img src="assets/icons/logo.png" alt="Logo" width="36" height="36">
           <span>Astronomska opservatorija</span>
         </a>
@@ -21,12 +25,14 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="nav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto nav-links">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/galerija.html">Galerija</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/kontakt.html">Kontakt</a></li>
-            <li class="nav-item"><button id="uiToggle" class="btn btn-sm btn-outline-secondary">A11y/Font</button></li>
+            <li class="nav-item">
+              <button id="uiToggle" class="btn btn-sm btn-outline-secondary ms-lg-3">A11y/Font</button>
+            </li>
           </ul>
         </div>
       </div>
@@ -35,21 +41,21 @@
 
   <!-- Hero -->
   <main>
-    <section class="hero-section text-white">
-      <div class="container hero-content">
-        <h1 class="hero-title">Posmatrajmo zvezde zajedno</h1>
-        <p class="hero-subtitle">Prijavi se za posetu opservatoriji, učestvuj u radionicama i istraži noćno nebo.</p>
+    <section class="hero text-white d-flex align-items-center">
+      <div class="container py-5">
+        <h1 class="display-5 fw-bold">Posmatrajmo zvezde zajedno</h1>
+        <p class="lead">Prijavi se za posetu opservatoriji, učestvuj u radionicama i istraži noćno nebo.</p>
         <a href="pages/dogadjaji.html" class="btn btn-primary btn-lg">Najave događaja</a>
       </div>
     </section>
 
     <!-- Slajder -->
-    <section class="container slider-section">
+    <section class="container my-5">
       <div id="astroSlider" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active"><img src="assets/img/galaksija1.jpg" alt="Galaksija"></div>
-          <div class="carousel-item"><img src="assets/img/nebula2.jpg" alt="Maglina"></div>
-          <div class="carousel-item"><img src="assets/img/teleskop3.jpg" alt="Teleskop"></div>
+          <div class="carousel-item active"><img class="d-block w-100" src="assets/img/galaksija1.jpg" alt="Galaksija"></div>
+          <div class="carousel-item"><img class="d-block w-100" src="assets/img/nebula2.jpg" alt="Maglina"></div>
+          <div class="carousel-item"><img class="d-block w-100" src="assets/img/teleskop3.jpg" alt="Teleskop"></div>
         </div>
         <button class="carousel-control-prev" data-bs-target="#astroSlider" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
         <button class="carousel-control-next" data-bs-target="#astroSlider" data-bs-slide="next"><span class="carousel-control-next-icon"></span></button>
@@ -58,14 +64,16 @@
   </main>
 
   <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container footer-content">
+  <footer class="border-top py-4">
+    <div class="container small d-flex justify-content-between">
       <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle">Visoki kontrast</a>
+      <a href="#" id="contrastToggle" class="link-secondary">Visoki kontrast</a>
     </div>
   </footer>
 
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Glavni JS -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
