--- a/index.html
+++ b/index.html
@@ -14,30 +14,39 @@
 </head>
 <body>
   <!-- Navigacija -->
-  <header class="sticky-top shadow-sm">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <img src="assets/icons/logo.png" alt="Logo" width="36" height="36">
-          <span>Astronomska opservatorija</span>
-        </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="nav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/galerija.html">Galerija</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/kontakt.html">Kontakt</a></li>
-            <li class="nav-item">
-              <button id="uiToggle" class="btn btn-sm btn-outline-secondary ms-lg-3">A11y/Font</button>
-            </li>
-          </ul>
+  <header class="main-header sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <!-- Logo -->
+      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="assets/icons/logo.png" alt="Logo" width="40" height="40" onerror="this.src='https://via.placeholder.com/40x40?text=★'">
+        <span>Astronomska opservatorija</span>
+      </a>
+
+      <!-- Toggler za mobilne -->
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navigacija -->
+      <div id="nav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto align-items-lg-center">
+          <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/galerija.html">Galerija</a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/kontakt.html">Kontakt</a></li>
+        </ul>
+
+        <!-- Dugmad za pristupačnost -->
+        <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+          <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+          <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
         </div>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
+
 
   <!-- Hero -->
   <main>
@@ -64,12 +73,48 @@
   </main>
 
   <!-- Footer -->
-  <footer class="border-top py-4">
-    <div class="container small d-flex justify-content-between">
-      <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle" class="link-secondary">Visoki kontrast</a>
+  <footer class="main-footer py-5">
+  <div class="container">
+    <div class="row">
+      <!-- Info kolona -->
+      <div class="col-md-4 mb-3">
+        <h5>Astronomska opservatorija</h5>
+        <p class="small mb-1">© 2025 Astronomska opservatorija</p>
+        <p class="small mb-1">Zrenjanin, Srbija</p>
+        <p class="small mb-1">✉ kontakt@opservatorija.rs</p>
+        <p class="small">☎ +381 23 123 456</p>
+      </div>
+
+      <!-- Linkovi -->
+      <div class="col-md-4 mb-3">
+        <h6>Brzi linkovi</h6>
+        <ul class="list-unstyled small">
+          <li><a href="pages/o-nama.html">O nama</a></li>
+          <li><a href="pages/dogadjaji.html">Događaji</a></li>
+          <li><a href="pages/galerija.html">Galerija</a></li>
+          <li><a href="pages/kontakt.html">Kontakt</a></li>
+        </ul>
+      </div>
+
+      <!-- Mreže -->
+      <div class="col-md-4 mb-3">
+        <h6>Pratite nas</h6>
+        <div class="social-links">
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-youtube"></i></a>
+        </div>
+      </div>
     </div>
-  </footer>
+
+    <!-- Kontrast toggle dole -->
+    <div class="text-center mt-4 small">
+      <a href="#" id="contrastToggle">Visoki kontrast</a>
+    </div>
+  </div>
+</footer>
+
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
