--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -9,39 +9,95 @@
 </head>
 <body>
   <!-- Navigacija -->
-  <header class="sticky-top shadow-sm">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo" width="36" height="36">
-          <span>Astronomska opservatorija</span>
-        </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="nav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
-            <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
-            <li class="nav-item"><a class="nav-link" href="galerija.html">Galerija</a></li>
-            <li class="nav-item"><a class="nav-link active" href="kontakt.html">Kontakt</a></li>
-          </ul>
-        </div>
+  <header class="main-header sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+        <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" onerror="this.src='https://via.placeholder.com/40x40?text=★'">
+        <span>Astronomska opservatorija</span>
+      </a>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="nav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
+          <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
+          <li class="nav-item"><a class="nav-link" href="galerija.html">Galerija</a></li>
+          <li class="nav-item"><a class="nav-link active" href="kontakt.html">Kontakt</a></li>
+        </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
+
 
   <!-- Sadržaj -->
-  <main class="container py-5">
-    <h1>Kontakt</h1>
-    <p>Ovde će biti forma za kontaktiranje opservatorije.</p>
+  <main>
+    <!-- Uvod -->
+    <section class="kontakt-header text-center text-light py-5">
+      <div class="container">
+        <h1>Kontakt</h1>
+        <p class="lead">Za sve informacije o posmatranju neba, događajima i posetama našoj opservatoriji kontaktirajte nas.</p>
+      </div>
+    </section>
+
+    <!-- Kontakt informacije -->
+    <section class="kontakt-info py-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-6">
+            <h3>Kontakt informacije</h3>
+            <ul class="list-unstyled">
+              <li><strong>📍 Adresa:</strong> Zrenjanin, Srbija</li>
+              <li><strong>📞 Telefon:</strong> +381 23 123 456</li>
+              <li><strong>✉️ Email:</strong> kontakt@opservatorija.rs</li>
+              <li><strong>🕑 Radno vreme:</strong> 18:00 – 23:00 (tokom posmatranja)</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18..."
+                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Kontakt forma -->
+    <section class="kontakt-forma">
+      <div class="container">
+        <h2>Pošaljite nam poruku</h2>
+        <form id="contactForm" novalidate>
+          <div class="mb-3">
+            <label for="name" class="form-label">Ime i prezime</label>
+            <input type="text" class="form-control" id="name" placeholder="Unesite vaše ime" required>
+            <div class="invalid-feedback">Molimo unesite ime.</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Email adresa</label>
+            <input type="email" class="form-control" id="email" placeholder="ime@primer.com" required>
+            <div class="invalid-feedback">Molimo unesite validnu email adresu.</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label">Poruka</label>
+            <textarea class="form-control" id="message" rows="4" placeholder="Vaša poruka..." required></textarea>
+            <div class="invalid-feedback">Molimo unesite poruku.</div>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Pošalji</button>
+        </form>
+        <div id="formMessage" class="mt-3"></div>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
-  <footer class="border-top py-4">
-    <div class="container small d-flex justify-content-between">
+  <footer class="main-footer py-4">
+    <div class="container small">
       <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle" class="link-secondary">Visoki kontrast</a>
+      <a href="#" id="contrastToggle">Visoki kontrast</a>
     </div>
   </footer>
 
