--- a/index.html
+++ b/index.html
@@ -9,44 +9,50 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+
   <!-- Glavni CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <!-- Logo -->
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="assets/icons/logo.png" alt="Logo" width="40" height="40" onerror="this.src='https://via.placeholder.com/40x40?text=★'">
-        <span>Astronomska opservatorija</span>
-      </a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+          <img src="assets/icons/logo.png" alt="Logo" width="40" height="40" 
+               onerror="this.src='https://via.placeholder.com/40x40?text=★'">
+          <span>Astronomska opservatorija</span>
+        </a>
 
-      <!-- Toggler za mobilne -->
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <!-- Toggler za mobilne -->
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <!-- Navigacija -->
-      <div id="nav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto align-items-lg-center">
-          <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/galerija.html">Galerija</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/kontakt.html">Kontakt</a></li>
-        </ul>
+        <!-- Navigacija -->
+        <div id="nav" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto align-items-lg-center">
+            <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/galerija.html">Galerija</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/kontakt.html">Kontakt</a></li>
+          </ul>
 
-        <!-- Dugmad za pristupačnost -->
-        <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
-          <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
-          <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          <!-- Dugmad za pristupačnost -->
+          <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+            <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-</header>
-
+    </nav>
+  </header>
 
   <!-- Hero -->
   <main>
@@ -59,62 +65,88 @@
     </section>
 
     <!-- Slajder -->
-    <section class="container my-5">
-      <div id="astroSlider" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active"><img class="d-block w-100" src="assets/img/galaksija1.jpg" alt="Galaksija"></div>
-          <div class="carousel-item"><img class="d-block w-100" src="assets/img/nebula2.jpg" alt="Maglina"></div>
-          <div class="carousel-item"><img class="d-block w-100" src="assets/img/teleskop3.jpg" alt="Teleskop"></div>
+<section class="container my-5">
+  <div id="astroSlider" class="carousel slide shadow-lg rounded-4 overflow-hidden" data-bs-ride="carousel">
+    
+    <!-- indikator tačkice -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="2"></button>
+    </div>
+
+    <!-- slajdovi -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/img/galaksija1.jpg" alt="Galaksija">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
+          <h5>Galaksija u daljini</h5>
+          <p>Pogledajmo čuda kosmosa kroz naš teleskop.</p>
         </div>
-        <button class="carousel-control-prev" data-bs-target="#astroSlider" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
-        <button class="carousel-control-next" data-bs-target="#astroSlider" data-bs-slide="next"><span class="carousel-control-next-icon"></span></button>
       </div>
-    </section>
-  </main>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/nebula2.jpg" alt="Maglina">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
+          <h5>Misteriozne magline</h5>
+          <p>Pridruži se radionicama i nauči više o svemiru.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/teleskop3.jpg" alt="Teleskop">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
+          <h5>Noć posmatranja</h5>
+          <p>Istraži nebo uživo u našoj opservatoriji.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- kontrole -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#astroSlider" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#astroSlider" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="main-footer py-5">
-  <div class="container">
-    <div class="row">
-      <!-- Info kolona -->
-      <div class="col-md-4 mb-3">
-        <h5>Astronomska opservatorija</h5>
-        <p class="small mb-1">© 2025 Astronomska opservatorija</p>
-        <p class="small mb-1">Zrenjanin, Srbija</p>
-        <p class="small mb-1">✉ kontakt@opservatorija.rs</p>
-        <p class="small">☎ +381 23 123 456</p>
-      </div>
+    <div class="container">
+      <div class="row">
+        <!-- Info kolona -->
+        <div class="col-md-4 mb-3">
+          <h5>Astronomska opservatorija</h5>
+          <p class="small mb-1">© 2025 Astronomska opservatorija</p>
+          <p class="small mb-1">Zrenjanin, Srbija</p>
+          <p class="small mb-1">✉ kontakt@opservatorija.rs</p>
+          <p class="small">☎ +381 23 123 456</p>
+        </div>
 
-      <!-- Linkovi -->
-      <div class="col-md-4 mb-3">
-        <h6>Brzi linkovi</h6>
-        <ul class="list-unstyled small">
-          <li><a href="pages/o-nama.html">O nama</a></li>
-          <li><a href="pages/dogadjaji.html">Događaji</a></li>
-          <li><a href="pages/galerija.html">Galerija</a></li>
-          <li><a href="pages/kontakt.html">Kontakt</a></li>
-        </ul>
-      </div>
+        <!-- Linkovi -->
+        <div class="col-md-4 mb-3">
+          <h6>Brzi linkovi</h6>
+          <ul class="list-unstyled small">
+            <li><a href="pages/o-nama.html">O nama</a></li>
+            <li><a href="pages/dogadjaji.html">Događaji</a></li>
+            <li><a href="pages/galerija.html">Galerija</a></li>
+            <li><a href="pages/kontakt.html">Kontakt</a></li>
+          </ul>
+        </div>
 
-      <!-- Mreže -->
-      <div class="col-md-4 mb-3">
-        <h6>Pratite nas</h6>
-        <div class="social-links">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-youtube"></i></a>
+        <!-- Mreže -->
+        <div class="col-md-4 mb-3">
+          <h6>Pratite nas</h6>
+          <div class="social-links">
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-youtube"></i></a>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- Kontrast toggle dole -->
-    <div class="text-center mt-4 small">
-      <a href="#" id="contrastToggle">Visoki kontrast</a>
-    </div>
-  </div>
-</footer>
-
-
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
