--- a/pages/galerija.html
+++ b/pages/galerija.html
@@ -4,49 +4,113 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Galerija - Astronomska opservatorija</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
+
+  <!-- Glavni CSS -->
   <link href="../assets/css/main.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-        <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" onerror="this.src='https://via.placeholder.com/40x40?text=★'">
-        <span>Astronomska opservatorija</span>
-      </a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="nav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
-          <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
-          <li class="nav-item"><a class="nav-link active" href="galerija.html">Galerija</a></li>
-          <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" 
+               onerror="this.src='https://via.placeholder.com/40x40?text=★'">
+          <span>Astronomska opservatorija</span>
+        </a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="nav" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto align-items-lg-center">
+            <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
+            <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
+            <li class="nav-item"><a class="nav-link active" href="galerija.html">Galerija</a></li>
+            <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
+          </ul>
+          <!-- Dugmad za pristupačnost -->
+          <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+            <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
-
+    </nav>
+  </header>
 
   <!-- Sadržaj -->
   <main class="container py-5">
     <h1>Galerija</h1>
-    <p>Ovde će biti prikazane slike opservatorije i astronomskih fenomena.</p>
+    <p class="mb-4">Ovde će biti prikazane slike opservatorije i astronomskih fenomena.</p>
+
+    <!-- Dinamička galerija -->
+    <div id="gallery" class="row g-4"></div>
   </main>
 
+  <!-- Modal za lightbox -->
+  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content bg-dark">
+        <div class="modal-body text-center">
+          <img id="lightboxImg" src="" alt="" class="img-fluid rounded">
+          <p id="lightboxCaption" class="text-light mt-2"></p>
+        </div>
+        <div class="modal-footer border-0">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zatvori</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
-  <footer class="main-footer py-4">
-    <div class="container small">
-      <span>&copy; 2025 Astronomska opservatorija</span>
-      <a href="#" id="contrastToggle">Visoki kontrast</a>
+  <footer class="main-footer py-5">
+    <div class="container">
+      <div class="row">
+        <!-- Info kolona -->
+        <div class="col-md-4 mb-3">
+          <h5>Astronomska opservatorija</h5>
+          <p class="small mb-1">© 2025 Astronomska opservatorija</p>
+          <p class="small mb-1">Zrenjanin, Srbija</p>
+          <p class="small mb-1">✉ kontakt@opservatorija.rs</p>
+          <p class="small">☎ +381 23 123 456</p>
+        </div>
+
+        <!-- Linkovi -->
+        <div class="col-md-4 mb-3">
+          <h6>Brzi linkovi</h6>
+          <ul class="list-unstyled small">
+            <li><a href="o-nama.html">O nama</a></li>
+            <li><a href="dogadjaji.html">Događaji</a></li>
+            <li><a href="galerija.html">Galerija</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </div>
+
+        <!-- Mreže -->
+        <div class="col-md-4 mb-3">
+          <h6>Pratite nas</h6>
+          <div class="social-links">
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-youtube"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
 
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Glavni JS -->
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
