--- a/pages/dogadjaji.html
+++ b/pages/dogadjaji.html
@@ -16,6 +16,9 @@
 
   <!-- Glavni CSS -->
   <link href="../assets/css/main.css" rel="stylesheet">
+  
+  <!-- AOS CSS za animacije na skrolovanje -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
 <body>
   <!-- Navigacija -->
@@ -23,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" 
+          <img src="../assets/icons/logo.png" alt="Logo Astronomske opservatorije" width="40" height="40" class="no-hover"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
@@ -49,46 +52,18 @@
 
   <!-- Sadržaj -->
   <main class="container py-5">
-    <h1 class="mb-4">Događaji</h1>
-    <div class="row g-4">
-      <!-- Događaj 1 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <img src="../assets/img/dogadjaj1.jpg" class="card-img-top" alt="Posmatranje meteorskog roja">
-          <div class="card-body">
-            <h5 class="card-title">Posmatranje meteorskog roja</h5>
-            <p class="card-text">Pridružite nam se na noćnom posmatranju meteorskog roja Perzeida sa stručnim vodičima.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">12. avgust 2025.</small>
-          </div>
-        </div>
-      </div>
-      <!-- Događaj 2 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <img src="../assets/img/dogadjaj2.jpg" class="card-img-top" alt="Predavanje o svemiru">
-          <div class="card-body">
-            <h5 class="card-title">Predavanje: Tajne svemira</h5>
-            <p class="card-text">Edukativno predavanje za studente i entuzijaste o najnovijim otkrićima u astronomiji.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">20. septembar 2025.</small>
-          </div>
-        </div>
-      </div>
-      <!-- Događaj 3 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <img src="../assets/img/dogadjaj3.jpg" class="card-img-top" alt="Radionica za decu">
-          <div class="card-body">
-            <h5 class="card-title">Radionica za decu</h5>
-            <p class="card-text">Zabavna radionica gde deca mogu da nauče o planetama i sazvežđima kroz interaktivne igre.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">5. oktobar 2025.</small>
-          </div>
-        </div>
+    <h1 class="mb-4" data-aos="fade-down">Događaji</h1>
+    <p class="mb-4" data-aos="fade-up" data-aos-delay="150">
+      Na ovoj stranici možete pronaći informacije o predstojećim događajima u našoj opservatoriji.
+    </p>
+
+    <!-- Dinamički događaji -->
+    <div id="events" class="row g-4"></div>
+
+    <!-- Loader za događaje -->
+    <div id="eventsLoader" class="text-center my-5" style="display:none;">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Učitavanje...</span>
       </div>
     </div>
   </main>
@@ -121,9 +96,9 @@
         <div class="col-md-4 mb-3">
           <h6>Pratite nas</h6>
           <div class="social-links">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-youtube"></i></a>
+            <a href="#"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
+            <a href="#"><i class="bi bi-youtube" aria-label="YouTube"></i></a>
           </div>
         </div>
       </div>
@@ -134,5 +109,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Glavni JS -->
   <script src="../assets/js/main.js"></script>
+  <!-- AOS JS za animacije na skrolovanje -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
+  <!-- Back to Top -->
+  <button id="backToTop" class="btn btn-primary">
+    <i class="bi bi-arrow-up"></i>
+  </button>
 </body>
 </html>
