--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -16,6 +16,9 @@
   
   <!-- Glavni CSS -->
   <link href="../assets/css/main.css" rel="stylesheet">
+  
+  <!-- AOS CSS za animacije na skrolovanje -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
 <body>
   <!-- Navigacija -->
@@ -23,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" 
+          <img src="../assets/icons/logo.png" alt="Logo Astronomske opservatorije" width="40" height="40" class="no-hover"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
@@ -50,18 +53,20 @@
   <!-- Sadržaj -->
   <main>
     <!-- Uvod -->
-    <section class="kontakt-header text-center text-light py-5">
+    <section class="kontakt-header text-center text-light py-5 bg-dark">
       <div class="container">
-        <h1>Kontakt</h1>
-        <p class="lead">Za sve informacije o posmatranju neba, događajima i posetama našoj opservatoriji kontaktirajte nas.</p>
+        <h1 data-aos="fade-down">Kontakt</h1>
+        <p class="lead" data-aos="fade-up" data-aos-delay="200">
+          Za sve informacije o posmatranju neba, događajima i posetama našoj opservatoriji kontaktirajte nas.
+        </p>
       </div>
     </section>
 
-    <!-- Kontakt informacije -->
+    <!-- Kontakt informacije + mapa -->
     <section class="kontakt-info py-5">
       <div class="container">
         <div class="row g-4">
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-right">
             <h3>Kontakt informacije</h3>
             <ul class="list-unstyled">
               <li><strong>📍 Adresa:</strong> Zrenjanin, Srbija</li>
@@ -70,17 +75,25 @@
               <li><strong>🕑 Radno vreme:</strong> 18:00 – 23:00 (tokom posmatranja)</li>
             </ul>
           </div>
-          <div class="col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18..."
-                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <div class="col-md-6" data-aos="fade-left">
+            <h3>Naša lokacija</h3>
+            <iframe
+              width="100%"
+              height="300"
+              style="border:0;"
+              loading="lazy"
+              allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade"
+              src="https://maps.google.com/maps?q=Zrenjanin&t=&z=12&ie=UTF8&iwloc=&output=embed">
+            </iframe>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Kontakt forma -->
-    <section class="kontakt-forma">
-      <div class="container">
+    <section class="kontakt-forma py-5">
+      <div class="container" data-aos="fade-up">
         <h2>Pošaljite nam poruku</h2>
         <form id="contactForm" novalidate>
           <div class="mb-3">
@@ -136,9 +149,9 @@
         <div class="col-md-4 mb-3">
           <h6>Pratite nas</h6>
           <div class="social-links">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-youtube"></i></a>
+            <a href="#"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
+            <a href="#"><i class="bi bi-youtube" aria-label="YouTube"></i></a>
           </div>
         </div>
       </div>
@@ -149,5 +162,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Glavni JS -->
   <script src="../assets/js/main.js"></script>
+  <!-- AOS JS -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <!-- Back to Top -->
+<button id="backToTop" class="btn btn-primary">
+  <i class="bi bi-arrow-up"></i>
+</button>
 </body>
 </html>
