--- a/pages/o-nama.html
+++ b/pages/o-nama.html
@@ -16,6 +16,9 @@
 
   <!-- Glavni CSS -->
   <link href="../assets/css/main.css" rel="stylesheet">
+  
+  <!-- AOS CSS za animacije na skrolovanje -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
 <body>
   <!-- Navigacija -->
@@ -23,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" 
+          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" class="no-hover"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
@@ -50,7 +53,7 @@
   <!-- Sadržaj -->
   <main class="container py-5">
     <div class="row align-items-center">
-      <div class="col-lg-6 mb-4 mb-lg-0">
+      <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
         <h1>O nama</h1>
         <p>
           Astronomska opservatorija je centar za posmatranje noćnog neba i edukaciju iz oblasti astronomije.
@@ -61,7 +64,7 @@
           i stručni vodiči koji će vas uputiti u tajne svemira.
         </p>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-left">
         <img src="../assets/img/opservatorija.jpg" alt="Opservatorija" class="img-fluid rounded shadow">
       </div>
     </div>
@@ -95,9 +98,9 @@
         <div class="col-md-4 mb-3">
           <h6>Pratite nas</h6>
           <div class="social-links">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-youtube"></i></a>
+            <a href="#"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
+            <a href="#"><i class="bi bi-youtube" aria-label="YouTube"></i></a>
           </div>
         </div>
       </div>
@@ -108,5 +111,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Glavni JS -->
   <script src="../assets/js/main.js"></script>
+  <!-- AOS JS -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <!-- Back to Top -->
+<button id="backToTop" class="btn btn-primary">
+  <i class="bi bi-arrow-up"></i>
+</button>
 </body>
 </html>
