--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Astronomska opservatorija – Početna</title>
+  <title>Astronomska opservatorija</title>
   <meta name="description" content="Dobrodošli na početnu stranicu astronomske opservatorije u Zrenjaninu. Pronađite informacije o događajima, galeriji i edukativnim sadržajima.">
   <meta name="keywords" content="astronomija, opservatorija, početna, zvezde, planete, edukacija, Zrenjanin">
   <meta name="author" content="Marko Bobinac SI 29/21">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Glavni CSS -->
-  <link href="../assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
   
   <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
@@ -62,17 +62,28 @@
 
   <!-- Hero -->
   <main>
-    <section class="hero text-white d-flex align-items-center">
-      <div class="container py-5 text-center">
-        <h1 class="display-5 fw-bold" data-aos="fade-down">Posmatrajmo zvezde zajedno</h1>
-        <p class="lead" data-aos="fade-up" data-aos-delay="200">Prijavi se za posetu opservatoriji, učestvuj u radionicama i istraži noćno nebo.</p>
-        <a href="pages/dogadjaji.html" class="btn btn-primary btn-lg" data-aos="zoom-in" data-aos-delay="400">Najave događaja</a>
+    <section class="hero text-white d-flex align-items-center" 
+             style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/img/milky-way.jpg') center/cover no-repeat;">
+      <div class="container py-5 text-center" data-aos="zoom-in">
+        <h1 class="display-5 fw-bold">Posmatrajmo zvezde zajedno</h1>
+        <p class="lead mb-4">Doživite čaroliju svemira u našoj opservatoriji u Zrenjaninu.</p>
+        <a href="pages/dogadjaji.html" class="btn btn-primary btn-lg">Najave događaja</a>
       </div>
+    </section>
+
+    <!-- Kratki uvod -->
+    <section class="container my-5 text-center">
+      <h2 data-aos="fade-up">Dobrodošli u astronomsku opservatoriju</h2>
+      <p class="lead" data-aos="fade-up" data-aos-delay="150">
+        Naša misija je da približimo astronomiju svima, kroz javna posmatranja, predavanja i radionice.
+        Istražite univerzum zajedno sa nama i otkrijte tajne beskrajnog svemira.
+      </p>
+      <a href="pages/o-nama.html" class="btn btn-outline-light mt-2" data-aos="fade-up" data-aos-delay="300">Saznaj više</a>
     </section>
 
     <!-- Slajder -->
     <section class="container my-5">
-      <div id="astroSlider" class="carousel slide shadow-lg rounded-4 overflow-hidden" data-bs-ride="carousel">
+      <div id="astroSlider" class="carousel slide shadow-lg rounded-4 overflow-hidden" data-bs-ride="carousel" data-bs-interval="5000">
         
         <!-- indikator tačkice -->
         <div class="carousel-indicators">
@@ -81,23 +92,23 @@
           <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="2"></button>
         </div>
 
-        <!-- slajdovi -->
+        <!-- Slajdovi -->
         <div class="carousel-inner">
-          <div class="carousel-item active" data-aos="fade-up">
+          <div class="carousel-item active">
             <img class="d-block w-100" src="assets/img/galaksija1.jpg" alt="Galaksija">
             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
               <h5>Galaksija u daljini</h5>
               <p>Pogledajmo čuda kosmosa kroz naš teleskop.</p>
             </div>
           </div>
-          <div class="carousel-item" data-aos="fade-up" data-aos-delay="200">
+          <div class="carousel-item">
             <img class="d-block w-100" src="assets/img/nebula2.jpg" alt="Maglina">
             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
               <h5>Misteriozne magline</h5>
               <p>Pridruži se radionicama i nauči više o svemiru.</p>
             </div>
           </div>
-          <div class="carousel-item" data-aos="fade-up" data-aos-delay="400">
+          <div class="carousel-item">
             <img class="d-block w-100" src="assets/img/teleskop3.jpg" alt="Teleskop">
             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
               <h5>Noć posmatranja</h5>
@@ -106,7 +117,7 @@
           </div>
         </div>
 
-        <!-- kontrole -->
+        <!-- Kontrole -->
         <button class="carousel-control-prev" type="button" data-bs-target="#astroSlider" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </button>
@@ -118,41 +129,61 @@
   </main>
 
   <!-- Footer -->
-  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
-    <div class="container">
-      <div class="row">
-        <!-- Info kolona -->
-        <div class="col-md-4 mb-3">
-          <h5>Astronomska opservatorija</h5>
-          <p class="small mb-1">© 2025 Astronomska opservatorija</p>
-          <p class="small mb-1">Zrenjanin, Srbija</p>
-          <p class="small mb-1">✉ kontakt@opservatorija.rs</p>
-          <p class="small">☎ +381 23 123 456</p>
-        </div>
+  <footer class="main-footer text-light pt-5">
+  <div class="container">
+    <div class="row gy-4">
+      <!-- Logo i opis -->
+      <div class="col-md-4">
+        <h5 class="fw-bold">Astronomska opservatorija</h5>
+        <p class="small">
+          Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
+          Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
+        </p>
+      </div>
 
-        <!-- Linkovi -->
-        <div class="col-md-4 mb-3">
-          <h6>Brzi linkovi</h6>
-          <ul class="list-unstyled small">
-            <li><a href="pages/o-nama.html">O nama</a></li>
-            <li><a href="pages/dogadjaji.html">Događaji</a></li>
-            <li><a href="pages/galerija.html">Galerija</a></li>
-            <li><a href="pages/kontakt.html">Kontakt</a></li>
-          </ul>
-        </div>
+      <!-- Linkovi -->
+      <div class="col-md-2">
+        <h6 class="fw-bold">Navigacija</h6>
+        <ul class="list-unstyled small">
+          <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
+          <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
+          <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
+          <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
+        </ul>
+      </div>
 
-        <!-- Mreže -->
-        <div class="col-md-4 mb-3">
-          <h6>Pratite nas</h6>
-          <div class="social-links">
-            <a href="#"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
-            <a href="#"><i class="bi bi-youtube" aria-label="YouTube"></i></a>
-          </div>
+      <!-- Kontakt -->
+      <div class="col-md-3">
+        <h6 class="fw-bold">Kontakt</h6>
+        <ul class="list-unstyled small">
+          <li>Zrenjanin, Srbija</li>
+          <li>✉ kontakt@opservatorija.rs</li>
+          <li>☎ +381 23 123 456</li>
+          <li>Radno vreme: 18:00 – 23:00</li>
+        </ul>
+      </div>
+
+      <!-- Društvene mreže -->
+      <div class="col-md-3">
+        <h6 class="fw-bold">Pratite nas</h6>
+        <div class="d-flex gap-3 mt-2">
+          <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
         </div>
       </div>
     </div>
-  </footer>
+
+    <hr class="border-secondary my-4">
+
+    <!-- Donja traka -->
+    <div class="d-flex justify-content-between align-items-center pb-3 small">
+      <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
+      <span>Izradio: Marko Bobinac SI 29/21</span>
+    </div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -163,7 +194,7 @@
   <script>
     AOS.init();
   </script>
-  <!-- Back to Top -->
+  <!-- Back to top -->
   <button id="backToTop" class="btn btn-primary">
     <i class="bi bi-arrow-up"></i>
   </button>
